# Universal_HID_Device_Driver

./: README.md
UniversalDriver/: CMakeLists.txt  DeviceMonitor.cpp  DeviceMonitor.h  USBDeviceMonitor.cpp  USBDeviceMonitor.h  USBDeviceMonitorFactory.cpp  USBDeviceMonitorFactory.h  USBDeviceMonitorGeneric.cpp  USBDeviceMonitorGeneric.h  USBDeviceMonitorLinux.cpp  USBDeviceMonitorLinux.h  USBDeviceMonitorWindows.cpp  USBDeviceMonitorWindows.h  USBHidDevice.cpp  USBHidDevice.h  UniversalDriver.cpp  UniversalDriver.h
